// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots EditableText normal 1`] = `
<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": "25px",
        "width": "100%",
      }
    }
  >
    <div>
      editable text
    </div>
    <span
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "20px",
        }
      }
    >
      <test-file-stub
        height="12"
        width="12"
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots NumberRange normal 1`] = `
<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "border": "1px solid #d9d9d9",
        "borderRadius": "4px",
        "display": "flex",
        "justifyContent": "center",
        "padding": "3px",
      }
    }
  >
    <input
      onChange={[Function]}
      placeholder=""
      style={
        Object {
          "border": "0",
          "color": "rgba(0,0,0,.65)",
          "flex": "1",
          "fontSize": "12px",
          "outline": "0",
          "textAlign": "center",
        }
      }
      value=""
    />
    <span
      style={
        Object {
          "color": "rgba(0,0,0,.65)",
          "textAlign": "center",
          "width": "5%",
        }
      }
    >
       ~ 
    </span>
    <input
      onChange={[Function]}
      placeholder=""
      style={
        Object {
          "border": "0",
          "color": "rgba(0,0,0,.65)",
          "flex": "1",
          "fontSize": "12px",
          "outline": "0",
          "textAlign": "center",
        }
      }
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots Select combobox 1`] = `
<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div>
    <input
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      style={
        Object {
          "boxSizing": "border-box",
          "height": "27px",
          "position": "relative",
          "width": "200px",
        }
      }
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots Select normal 1`] = `
<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div>
    <div
      onClick={[Function]}
      style={
        Object {
          "alignItems": "center",
          "boxShadow": "0 1px 6px rgba(0,0,0,.2)",
          "cursor": "pointer",
          "display": "flex",
          "height": "27px",
          "width": "200px",
        }
      }
    >
      <div
        style={
          Object {
            "boxSizing": "border-box",
            "display": "inline-block",
            "paddingLeft": "5px",
            "width": "93%",
          }
        }
      >
        
      </div>
      <span
        style={
          Object {
            "display": "inline-block",
            "width": "7%",
          }
        }
      >
        <span>
          <test-file-stub
            height="8"
            width="8"
          />
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tree normal 1`] = `
<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <ul>
    <div
      style={
        Object {
          "color": "#919191",
          "fontSize": "12px",
          "letterSpacing": "1px",
          "width": "100%",
        }
      }
    >
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
          }
        }
      >
        <span
          onClick={[Function]}
          style={
            Object {
              "alignItems": "center",
              "cursor": "pointer",
              "display": "flex",
              "width": "10px",
            }
          }
        >
          <test-file-stub />
        </span>
        <span
          className="title-span"
          onClick={[Function]}
          style={
            Object {
              "color": "#919191",
              "cursor": "pointer",
              "marginLeft": "5px",
              "overflow": "hidden",
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
            }
          }
          title="书籍"
        >
          书籍
        </span>
        <div
          style={
            Object {
              "boxSizing": "border-box",
              "display": "flex",
              "margin": "0 5px",
              "marginLeft": "15px",
              "visibility": "hidden",
              "width": "40px",
            }
          }
        >
          <span
            onClick={[Function]}
            style={
              Object {
                "color": "red",
                "cursor": "pointer",
                "flex": "1",
                "fontSize": "10px",
              }
            }
          >
            <test-file-stub
              height="12"
              width="12"
            />
          </span>
          <span
            className="delete-icon"
            onClick={[Function]}
            style={
              Object {
                "color": "red",
                "cursor": "pointer",
                "flex": "1",
                "fontSize": "10px",
              }
            }
          >
            <test-file-stub
              height="12"
              width="12"
            />
          </span>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "color": "#919191",
          "fontSize": "12px",
          "letterSpacing": "1px",
          "width": "100%",
        }
      }
    >
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
          }
        }
      >
        <span
          onClick={[Function]}
          style={
            Object {
              "alignItems": "center",
              "cursor": "pointer",
              "display": "flex",
              "width": "10px",
            }
          }
        >
          <test-file-stub />
        </span>
        <span
          className="title-span"
          onClick={[Function]}
          style={
            Object {
              "color": "#108EE9",
              "cursor": "pointer",
              "marginLeft": "5px",
              "overflow": "hidden",
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
            }
          }
          title="电影"
        >
          电影
        </span>
        <div
          style={
            Object {
              "boxSizing": "border-box",
              "display": "flex",
              "margin": "0 5px",
              "marginLeft": "15px",
              "visibility": "hidden",
              "width": "40px",
            }
          }
        >
          <span
            onClick={[Function]}
            style={
              Object {
                "color": "red",
                "cursor": "pointer",
                "flex": "1",
                "fontSize": "10px",
              }
            }
          >
            <test-file-stub
              height="12"
              width="12"
            />
          </span>
          <span
            className="delete-icon"
            onClick={[Function]}
            style={
              Object {
                "color": "red",
                "cursor": "pointer",
                "flex": "1",
                "fontSize": "10px",
              }
            }
          >
            <test-file-stub
              height="12"
              width="12"
            />
          </span>
        </div>
      </div>
    </div>
  </ul>
</div>
`;
